# advent-of-code-2023

./: .clang-format  .gitignore  README.md  meson.build  meson.options
day-01-trebuchet/src/: main.c
day-03-gear-ratios/src/: main.c
day-05-if-you-give-a-seed-a-fertilizer/src/: main.c
day-06-wait-for-it/src/: main.c
day-08-haunted-wasteland/src/: main.c
day-10-pipe-maze/src/: main.c
day-11-cosmic-expansion/src/: main.c
day-13-point-of-incidence/src/: main.c
day-14-parabolic-reflector-dish/src/: main.c
day-15-lens-library/src/: main.c
day-16-the-floor-will-be-lava/src/: main.c
day-17-clumsy-crucible/src/: main.c
day-18-lavaduct-lagoon/src/: main.c
day-20-pulse-propagation/src/: main.c
day-21-step-counter/src/: main.c
day-23-a-long-walk/src/: main.c
day-24-never-tell-me-the-odds/src/: main.c
day-25-snowverload/src/: main.c
subprojects/: scu.wrap
